# Verpackungsplan

./: README.md  data.txt  test.txt
Verpackungsplan/: .regular_expression.txt.swp  CMakeLists.txt  Makefile  Makefile_  Settings.json  Untitled.cpp  Untitled.h  elements_selection.cpp  elements_selection.h  functions.cpp  functions.h  header.h  help.txt  main  main.cpp  photo.h  read_Excel_file.h  regular_expression.txt  settings.cpp  settings.h  statistics.cpp  statistics.h  verpackungsplan.ini  verpackungsplan.txt  write_Excel_file.cpp  write_Excel_file.h
Verpackungsplan.xcodeproj/: project.pbxproj
Verpackungsplan.xcodeproj/project.xcworkspace/xcuserdata/and.xcuserdatad/: UserInterfaceState.xcuserstate
Verpackungsplan.xcodeproj/xcshareddata/xcschemes/: Verpackungsplan.xcscheme
Verpackungsplan.xcodeproj/xcuserdata/and.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Verpackungsplan.xcodeproj/xcuserdata/and.xcuserdatad/xcschemes/: xcschememanagement.plist
Verpackungsplan/src/: elements_selection.cpp  elements_selection.h  functions.cpp  functions.h  header.h  main.cpp  photo.cpp  photo.h  read_Excel_file.cpp  serialization.cpp  serialization.h  settings.cpp  settings.h  statistics.cpp  statistics.h  write_Excel_file.cpp  write_Excel_file.h
